<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gps"
            android:checkable="false"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/gps_address" />
        <item
            android:id="@+id/nav_flight_vars"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/flight_vars" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_start"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/start" />
        </menu>
    </item>

</menu>
