<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/telemetry_title_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telemetry_title_latitude"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <TextView
            android:id="@+id/telemetry_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/telemetry_none" />

        <TextView
            android:id="@+id/telemetry_title_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telemetry_title_longitude"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <TextView
            android:id="@+id/telemetry_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/telemetry_none" />

        <TextView
            android:id="@+id/telemetry_title_velocity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telemetry_title_velocity"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <TextView
            android:id="@+id/telemetry_velocity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/telemetry_none" />

        <TextView
            android:id="@+id/telemetry_title_altitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telemetry_title_altitude"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <TextView
            android:id="@+id/telemetry_altitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/telemetry_none" />

        <TextView
            android:id="@+id/telemetry_title_vehicle_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telemetry_title_vehicle_mode"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <TextView
            android:id="@+id/telemetry_vehicle_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/telemetry_none" />

        <TextView
            android:id="@+id/telemetry_title_battery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telemetry_title_battery"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <TextView
            android:id="@+id/telemetry_battery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telemetry_none" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>